kubernetes/apps/kube-system/drm-exporter/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: drm-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: drm-exporter
      app.kubernetes.io/name: drm-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8081
          protocol: TCP
